<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_temp"
        android:layout_marginBottom="-20dp" />

    <TextView
        android:id="@+id/tv_temp"
        style="@style/TextViewHighStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@android:color/white"
        android:textSize="84sp" />

    <TextView
        android:id="@+id/tv_weather"
        style="@style/TextViewHighStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_temp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

    <RelativeLayout
        android:id="@+id/layout_humid"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_weather"
        android:layout_centerHorizontal="true"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv1"
            style="@style/TextViewHighStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/humid"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_humid"
            style="@style/TextViewHighStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv2"
            style="@style/TextViewHighStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv1"
            android:layout_marginTop="5dp"
            android:text="@string/wind"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_wind"
            style="@style/TextViewHighStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_humid"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_UV"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_weather"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv3"
            style="@style/TextViewHighStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/feels_like"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_feelslike"
            style="@style/TextViewHighStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv4"
            style="@style/TextViewHighStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv3"
            android:layout_marginTop="5dp"
            android:text="@string/UV"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_uv"
            style="@style/TextViewHighStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_feelslike"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_update"
        style="@style/TextViewLowStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp" />
</RelativeLayout>